[package]
name = "jwk-set"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "JSON Web Token (JWT) Set"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/jwk-rs"
homepage = "https://github.com/bk-rs/jwk-rs"
documentation = "https://docs.rs/jwk-set"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["with-decrypt", "with-fetcher"]

with-decrypt = ["jsonwebkey/jwt-convert", "jsonwebtoken", "serde"]
with-fetcher = ["http-api-client-endpoint", "http-api-client", "serde", "serde_json", "thiserror"]

[dependencies]
jsonwebkey = { version = "0.3", default-features = false }

jsonwebtoken = { version = "7.2", default-features = false, optional = true }

http-api-client-endpoint = { version = "0.2", default-features = false, optional = true }
http-api-client = { version = "0.2", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["std", "derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["std"], optional = true }
thiserror = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }
