[package]
name = "jwk-set"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "JSON Web Token (JWT) Set"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/jwk-rs"
homepage = "https://github.com/bk-rs/jwk-rs"
documentation = "https://docs.rs/jwk-set"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["with-decrypt"]

with-decrypt = ["jsonwebkey/jwt-convert", "jsonwebtoken"]

_priv_with_serde_json = ["serde_json"]

[dependencies]
jsonwebkey = { version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }

jsonwebtoken = { version = "7.2", default-features = false, optional = true }

serde_json = { version = "1.0", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
skip_feature_sets = [
    ["_priv_with_serde_json", "with-decrypt"],
]
